2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.addin.xml: Bump MD version.

2008-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoSolutionItemHandler.cs: Fix warning.

2008-05-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoMakefileFormat.cs: Track api changes.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.addin.xml: Merged the extension points for
	  project and solution option panels into a single extension point. A
	  single extension point will now be used for all kinds of items.
	  Extension conditions can be used to make panels visible only for
	  some specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoSolutionItemHandler.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.mds, MonoMakefileFormat.cs, Commands.cs,
	  MonoSolutionItemHandler.cs, Makefile.am,
	  MonoDeveloperExtensions.addin.xml, NUnit/MonoTestProvider.cs,
	  MonoDeveloperExtensions.mdp: New project model changes.

2008-03-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.mdp: Removed unneeded dependencies.

2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* Makefile.am, MonoDeveloperExtensions.mdp: Removed some unused glade and
	  gnome-sharp references (only the unused). But I'll continue to remove
	  glade, we need to lower the dependency tree a bit.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.addin.xml: Update MD version.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.addin.xml: Updated add-in category and
	  description.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
