@@ -1,3 +1,8 @@
+2008-06-12  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoMakefileFormat.cs: Avoid re-initializing the project handler for
+	  projects already created with the Mono format.
+
 2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDeveloperExtensions.addin.xml: Bump MD version.
